fixed spacing I think

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-p {text-align: center;
+p {text-align: left;
     background-color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif}
-div {padding-top: 10%;
-    padding-bottom: 10%;
-    padding-left: 10%;
-    padding-right: 10%}   
+div {padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 50px;
+    padding-right: 50px}   
 .container {
         width: 600px;
         height: 360px;
